// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BackgroundImage /> on SSR should work with multiple images in SSR node environment 1`] = `
"<div class=\\"gbi-1393017994-undefined\\" style=\\"background-position:center;background-repeat:no-repeat;background-size:cover;position:relative;opacity:0.99;display:inline-block\\" data-reactroot=\\"\\"><style>
          .gbi-1393017994-undefined:before,
          .gbi-1393017994-undefined:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gbi-1393017994-undefined:before {
            z-index: -100;
            background-image: url(string_of_base64),url(string_of_base64);
            
            opacity: 1; 
          }
          .gbi-1393017994-undefined:after {
            z-index: -101;
            
            
            
          }
        </style><noscript><style>
    .gbi-1393017994-undefined:before {
      opacity: 1;
      background-image: url('test_fixed_image.jpg'),url('test_fixed_image.jpg');
    }</style></noscript><h1>testempty</h1></div>"
`;

exports[`<BackgroundImage /> on SSR should work within SSR node environment 1`] = `
"<div class=\\"gbi-1393017994-undefined\\" style=\\"background-position:center;background-repeat:no-repeat;background-size:cover;position:relative;opacity:0.99\\" data-reactroot=\\"\\"><style>
          .gbi-1393017994-undefined:before,
          .gbi-1393017994-undefined:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            
            transition: opacity 0.5s ease 0.25s;
            background-position: center;
background-repeat: no-repeat;
background-size: cover;

          }
          .gbi-1393017994-undefined:before {
            z-index: -100;
            
            
            opacity: 1; 
          }
          .gbi-1393017994-undefined:after {
            z-index: -101;
            
            
            
          }
        </style><noscript><style>
    .gbi-1393017994-undefined:before {
      opacity: 1;
      background-image: url('test_fluid_image.jpg');
    }</style></noscript><h1>testempty</h1></div>"
`;
